--- a/wp-content/themes/bars2013/css/contact.css
+++ b/wp-content/themes/bars2013/css/contact.css
@@ -21,11 +21,11 @@
 #page-contact form#contact-form .contact-form-input-hint { text-align: right; }
 
 /* Input styling */
-#page-contact form#contact-form input, #page-contact form#contact-form textarea { font-family: 'Open Sans'; font-size: 10pt; margin: 0; padding: 7px; border: 2px solid black; border-radius: 8px; }
+#page-contact form#contact-form input, #page-contact form#contact-form textarea { font-family: 'Open Sans'; font-size: 10pt; margin: 0; padding: 7px; border: 2px solid black; }
 #page-contact form#contact-form #submit input { padding: 10px; }
 
 /* Validation messages styling */
 #page-contact form#contact-form .contact-form-input input.error,
-#page-contact form#contact-form .contact-form-input textarea.error { border-color: #FF2F2F; background-color: #FFD6D6; }
+#page-contact form#contact-form .contact-form-input textarea.error { border-color: #FF2F2F; }
 #page-contact form#contact-form .contact-form-input label.error { text-align: left; display: inline-block; vertical-align: top; width: 200px; margin-left: 20px; padding: 5px 10px; background-color: #FFD6D6; font-weight: bold; color: #B70000; border-radius: 5px; font-size: 8pt; }
 
