--- a/wp-content/themes/bars2013/css/text.css
+++ b/wp-content/themes/bars2013/css/text.css
@@ -1,6 +1,7 @@
 /* Text styles */
 .text-oswald { font-family: 'Oswald'; font-size: 10pt; color: #CECECE; text-align: justify; }
 .text-opensans { font-family: 'Open Sans'; font-size: 10pt; color: #CECECE; text-align: justify; }
+.indented { text-indent: 16pt; }
 .size-highlight { font-size: 14pt; }
 
 /* Page contents */
@@ -29,15 +30,28 @@
 #page-selection .schedule-day .movie-post a { text-decoration: none; color: #bbbbbb; }
 #page-selection .schedule-day .movie-post:hover a { text-decoration: none; color: white; }
 
-/* Movie info (movie.php) */
-.movie .screenings-info, .movie .info-container .info { color: white; }
-.movie .screenings-info .section { font-size: 13.5pt; }
+/* Movie info (single-movie.php) */
+.movie .screenings-info,
+.movie .info-container .info { color: white; }
+.movie .screenings-info .section { text-align: right; font-size: 13.5pt; }
 .movie .screenings-info .screenings .screenings-caption { font-size: 10pt; }
-.movie .screenings-info .screenings .screening, .movie .info-container .info .links, .movie .info-container .info .specs,
-.movieblock .info-container .info .specs, .movie .info-container .info .directors,
+.movie .screenings-info .screenings .screening { text-align: center; }
+.movie .screenings-info .screenings .screening,
+.movie .info-container .info .links,
+.movie .info-container .info .specs,
+.movie .info-container .info .directors,
 .movie .info-container .info .cast { font-size: 9pt; }
 .movie .screenings-info .screenings .screening .screening-daynumber,
-.movie .info-container .info .title, .movieblock .info-container .info .title { font-size: 14.5pt; }
+.movie .info-container .info .title { font-size: 14.5pt; }
+
+/* Movie block info (single-movieblock.php) */
+.movieblock .screenings-info,
+.movieblock .info-container .info { color: white; }
+.movieblock .screenings-info .section { font-size: 13.5pt; text-align: right; }
+.movieblock .screenings-info .screenings .screenings-caption { font-size: 10pt; }
+.movieblock .screenings-info .screenings .screening { font-size: 9pt; text-align: center; }
+.movieblock .screenings-info .screenings .screening .screening-daynumber,
+.movieblock .info-container .info .title { font-size: 14.5pt; }
 
 /* Contact (contact.php) */
 #page-contact .contact-form-input-hint { font-size: 8pt; font-style: italic; }
