--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -26,7 +26,8 @@ Author URI:		mailto:author@bars.com
 ul.checkmark { list-style: none; list-style-position:outside;  }
 ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6em; }
 
-.subtle-shadow { box-shadow: 0 10px 0 -7px black; -webkit-box-shadow: 0 10px 0 -7px black; -moz-box-shadow: 0 10px 0 -7px black; }
+.subtle-shadow-top { box-shadow: 0 -2px 2px 1px black; -webkit-box-shadow: 0 -2px 2px 1px black; -moz-box-shadow: 0 -2px 2px 1px black; }
+.subtle-shadow-bottom { box-shadow: 0 2px 2px 1px black; -webkit-box-shadow: 0 2px 2px 1px black; -moz-box-shadow: 0 2px 2px 1px black; }
 .arrow-right { width: 0; height: 0; border-top: 8px solid transparent; border-bottom: 8px solid transparent; border-left: 8px solid white; }
 .arrow-down { width: 0; height: 0; border-top: 8px solid white; border-right: 8px solid transparent; border-left: 8px solid transparent; }
 
@@ -34,7 +35,7 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 
 /* Header */
 div#header { font-family: 'Oswald'; background: black; }
-div#header-container { padding-top: 15px; overflow: auto; background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; }
+div#header-container { padding-top: 15px; background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; }
 div#header-description { color: white; font-size: 0.65em; letter-spacing: 0.2em; font-weight: lighter; text-align: center; text-transform: uppercase; }
 div#header-image:hover { cursor: pointer; }
 div#header-image { margin: 6px auto 0 auto; width: 350px; height: 119px; background-image: url("images/header-img.png"); }
@@ -51,7 +52,7 @@ div#bars-header-social-youtube { background-image: url("images/youtube-gray.png"
 div#bars-header-social-youtube:hover { background-image: url("images/youtube.png"); }
 
 /* Header menu */
-#header-menu { background-color: black; text-align: center; text-transform: uppercase; margin: 0; padding: 0; }
+#header-menu { position: relative; background-color: black; text-align: center; text-transform: uppercase; margin: 0; padding: 0; }
 #header-menu .nav-menu ul { margin: 0; padding: 0; }
 #header-menu .nav-menu ul li { display: inline-block; vertical-align: middle; padding: 8px; }
 
@@ -59,19 +60,15 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 #header-menu { z-index: 99; width: 100%; }
 
 /* Main container */
-#main { background: url("images/bgpattern2.png"); overflow: hidden;
-	-moz-box-shadow: inset 0 5px 1px #000000;
-	-webkit-box-shadow: inset 0 5px 1px #000000;
-	box-shadow: inset 0 5px 1px #000000;
-}
+#main { background: url("images/bgpattern2.png"); overflow: hidden; }
 #main-logo-bg { background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; overflow: hidden; background-color: rgba(10,0,0,0.4); }
-#main-container { width: 955px; margin: 0 auto; padding: 0 0 0 0; overflow: hidden; /*background-color: rgba(10,0,0,0.4);*/ }
+#main-container { width: 955px; margin: 0 auto; padding: 0 0 0 0; overflow: hidden; }
 #content { width: 650px; float: left; }
 #content .page-header { margin-top: 15px; }
 #content .page-content { padding: 20px; }
 
 /* Footer */
-#footer { overflow: hidden; text-align: center; box-shadow: inset 0px 70px 50px -30px black; background: rgba(0,0,0,0.6); }
+#footer { overflow: hidden; text-align: center; background: rgba(0,0,0,0.6); }
 #footer-container { width: 955px; margin: 0 auto; padding: 10px 20px 10px 20px; }
 #footer .footer-nav { overflow: hidden; }
 #footer .footer-logos { overflow: hidden; position: relative; }
@@ -97,31 +94,30 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 
 /* Home (index.php) */
 #page-home { overflow: hidden; }
-#page-home .column-left { width: 60%; float: left; min-height: 400px; margin: 5px 10px 15px 0; }
-#page-home .column-right { min-height: 400px; margin: 5px 0 15px 0; }
+#page-home .posts-header, #page-home .posts-footer { background: black; color: white; font-family: 'Oswald'; text-transform: uppercase; font-size: 14pt; padding: 6px 0 6px 6px; letter-spacing: 2pt; }
+#page-home .posts-footer { text-align: right; padding: 6px 6px 6px 0; }
+#page-home .posts-header:before { content: '>>> '; }
+#page-home .posts-footer:after { content: ' >>>'; }
 
+/* Home page latests posts*/
+#page-home .latest-posts { text-align: center; margin-top: 5px; overflow: hidden; }
+#page-home .latest-posts .latest-post { border: 2px solid black; font-size: 12pt; opacity: 0.8; display: inline-block; position: relative; overflow: hidden; margin: 0 3px; text-align: left; }
+#page-home .latest-posts .latest-post:hover { opacity: 1; }
+#page-home .latest-posts .latest-post .post-title { width: 100%; text-shadow: 2px 2px 0.1em black; position: absolute; bottom: 0; left: 0; padding: 5px 10px 12px 10px; background-color: rgba(0,0,0,0.7); font-family: 'Oswald'; margin: 0 auto; text-align: left; }
+#page-home .latest-posts .latest-post .post-date { position: absolute; top: 0; left: 0; padding: 0 5px; font-family: 'Oswald'; font-size: 10pt; color: white; background-color: rgba(0,0,0,0.5); }
 
-
-
-
-/* Home page */
-body.page-template-home-template-php article.page { padding: 0; }
-body.page-template-home-template-php article.page .entry-content { padding: 0 0 0 0 !important; }
-body.page-template-home-template-php article.page .bars-recent-posts { padding: 7px 7px 0 7px; overflow: hidden; }
-body.page-template-home-template-php article.page .bars-recent-posts .latest-post .post-title a { color: white; }
-div.latest-post:nth-child(even) { padding: 3px 3px 7px 3px; margin-right: 0; float: right; }
-div.latest-post:nth-child(odd) { padding: 3px 3px 7px 3px; margin-left: 0; float: left;; }
-div.latest-post { opacity: 0.7; position: relative; overflow: hidden; background-color: rgba(0,0,0,1); margin-top: 1px; margin-bottom: 15px; text-align: left;  }
-div.latest-post:hover { cursor: pointer; opacity: 1; }
-div.latest-post .post-title { text-shadow: 2px 2px 0.1em black; padding-top: 5px; padding-bottom: 12px; position: absolute; bottom: 0; left: 0 !important; padding-left: 10px !important; padding-right: 10px !important; width: 100%; background-color: rgba(0,0,0,0.8); font-family: 'Oswald'; font-size: 1.6em; margin: 0 auto 0 auto; text-align: left; }
-div.latest-post .post-title a { color: red; }
-div.latest-post:hover .post-title a { text-decoration: none; }
-div.latest-post .post-date { position: absolute; top: 5px; left: 0; padding-left: 8px; padding-right: 8px; font-family: 'Oswald'; background-color: rgba(0,0,0,0.5); }
-div.latest-post .post-thumbnail img { width: 322px !important; height: 160px !important; }
-
-
-
-
+/* Home page recent posts */
+#page-home .recent-posts { font-family: 'Oswald'; color: white; }
+#page-home .recent-posts .recent-post { display: table; border-collapse:separate; border-top: 5px; margin-bottom: 10px; }
+#page-home .recent-posts .recent-post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
+#page-home .recent-posts .recent-post .post-info-container { position: relative; display: table-cell; vertical-align: top; padding-left: 10px; }
+#page-home .recent-posts .recent-post .post-date { font-size: 10pt; }
+#page-home .recent-posts .recent-post .post-title { font-size: 18pt; }
+#page-home .recent-posts .recent-post .post-excerpt { word-wrap: break-word; font-size: 10pt; }
+#page-home .recent-posts .recent-post .post-footer { width: 100%; position: absolute; bottom: 2px; font-size: 8pt; }
+#page-home .recent-posts .recent-post .post-footer .scratch { margin-bottom: 5px; }
+#page-home .recent-posts .recent-post .post-footer .post-fb-like { float: left; height: 21px; width: 84px; }
+#page-home .recent-posts .recent-post .post-footer .post-comment-count { float: left; padding: 0 5px; background: black; padding: 2px 5px; margin-right: 5px; }
 
 
 
@@ -161,22 +157,60 @@ div.latest-post .post-thumbnail img { width: 322px !important; height: 160px !im
 #page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; } /* filter: brightness(80%); -webkit-filter: brightness(80%); -moz-filter: brightness(80%); -o-filter: brightness(80%); -ms-filter: brightness(80%); */
 #page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; } /* filter: brightness(100%); -webkit-filter: brightness(100%); -moz-filter: brightness(100%); -o-filter: brightness(100%); -ms-filter: brightness(100%); */
 
-/* Movie / Movie block info (single-movie.php / single-movieblock.php	) */
+/* Movie info (single-movie.php) / Movie block info (single-movieblock.php) */
 .movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
-.movie .screenings-info { float: right; margin: -10px -10px 0 30px; } /* -10px counter act against padding 10px in previous line */
-.movie .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px; font-size: 18px; text-align: right; }
-.movie .screenings-info .screenings { overflow: hidden; }
-.movie .screenings-info .screenings .screenings-caption { width: 100%; float: left; background-color: rgba(180,10,0,0.8); padding-left: 5px; margin-top: 5px; }
-.movie .screenings-info .screenings .screening { float: left; padding: 5px; text-align: center; }
-.movie .screenings-info .screenings .screening .screening-daynumber { margin-top: -5px; }
-.movie .info-container .image, .movieblock .info-container .image { float: left; }
-.movie .info-container .info, .movieblock .info-container .info { overflow: hidden; }
-.movie .info-container .image, .movieblock .info-container .image { padding: 0 10px 0 0; }
+.movie .scratch,
+.movieblock .scratch { margin: 15px 0; }
+.movie .screenings-info,
+.movieblock .screenings-info { float: right; margin: -10px -10px 0 30px; } /* -10px counter act against padding: 10px in .movie */
+.movie .screenings-info .section,
+.movieblock .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px 40px 5px 10px; }
+.movie .screenings-info .screenings,
+.movieblock .screenings-info .screenings { overflow: hidden; }
+.movie .screenings-info .screenings .screenings-caption,
+.movieblock .screenings-info .screenings .screenings-caption { width: 100%; float: left; background-color: rgba(180,10,0,0.8); padding-left: 10px; margin-top: 5px; }
+.movie .screenings-info .screenings .screening,
+.movieblock .screenings-info .screenings .screening { float: left; padding: 5px; }
+.movie .screenings-info .screenings .screening .screening-daynumber,
+.movieblock .screenings-info .screenings .screening .screening-daynumber { margin-top: -5px; }
+.movie .info-container .info,
+.movieblock .info-container .info { overflow: hidden; }
+.movie .info-container .image,
+.movieblock .info-container .image { float: left; padding: 0 10px 0 0; }
 .movie .info-container .info .directors { margin-top: 10px; }
 .movie .movie-synopsis { overflow: hidden; }
-.movie .trailer-container, .movieblock .trailer-container { width: 300px; float: right; margin: 20px 0 5px 10px; }
+.movie .movie-synopsis p { margin: 0; }
+.movie .trailer-container { width: 300px; float: right; margin: 0 0 5px 10px; }
 
+/* Movie block info (single-movieblock.php) */
+.movieblock .movie-selectors { font-family: 'Oswald'; float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
+.movieblock .movie-selectors .movie-post { color: white; border: 1px solid rgba(255,255,255,0.1); margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
+.movieblock .movie-selectors .movie-post:hover { cursor: pointer; background-color: rgba(0,0,0,1); opacity: 1; }
+.movieblock .movie-selectors .movie-post .movie-post-thumbnail { position: relative; text-align: center; width: auto; }
+.movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; padding: 0 0 0 2px; font-size: 16px !important; }
+.movieblock .movie-selectors .movie-post .movie-post-info { padding: 0 0 0 2px; font-size: 12px; }
+.movieblock .movie-selectors .movie-post:hover a { text-decoration: none; color: white; }
+.movieblock .movie-selectors .movie-post a { text-decoration: none; color: #bbbbbb; }
+.movieblock .movie-selectors .movie-post { width: 160px; }
 
+.movieblock .movie-info-displayer { position: relative; font-family: 'Oswald'; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
+.movieblock .movie-info-displayer .scratch { margin: 15px 0; }
+.movieblock .movie-info-displayer .image { float: right; color: white; padding: 0; }
+.movieblock .movie-info-displayer .info { overflow: hidden; color: white; }
+.movieblock .movie-info-displayer .info .title { color: white; font-family: 'Oswald'; font-size: 20px; width: 260px; }
+.movieblock .movie-info-displayer .info .year,
+.movieblock .movie-info-displayer .info .country,
+.movieblock .movie-info-displayer .info .links,
+.movieblock .movie-info-displayer .info .runtime,
+.movieblock .movie-info-displayer .info .directors,
+.movieblock .movie-info-displayer .info .cast { color: white; font-family: 'Oswald'; font-size: 12px; }
+.movieblock .movie-info-displayer .info .directors { padding-top: 10px; }
+.movieblock .movie-info-displayer .trailer-container { height: 300px; }
+
+/* Movieblock scrollbars */
+.movieblock .movie-selectors::-webkit-scrollbar, .movieblock .movie-info-displayer::-webkit-scrollbar { width: 8px; }
+.movieblock .movie-selectors::-webkit-scrollbar-thumb, .movieblock .movie-info-displayer::-webkit-scrollbar-thumb { background: rgba(150,150,150,1); }
+.movieblock .movie-selectors::-webkit-scrollbar-thumb:window-inactive, .movieblock .movie-info-displayer::-webkit-scrollbar-thumb:window-inactive { background: rgba(255,0,0,0.4); }
 
 
 
@@ -257,48 +291,6 @@ body.search .bars-post-excerpt, body.archive .bars-post-excerpt { color: rgb(201
 body.search .bars-post-excerpt  .entry-date, body.search .bars-post-excerpt  .entry-categories, body.search .bars-post-excerpt  .entry-tags,
 body.archive .bars-post-excerpt  .entry-date, body.archive .bars-post-excerpt  .entry-categories, body.archive .bars-post-excerpt  .entry-tags { padding: 0 0 0 20px; font-size: 0.9em; }
 body.search .bars-post-excerpt  .entry-title, body.archive .bars-post-excerpt  .entry-title { padding: 0 0 0 20px; font-size: 1.5em; font-family: 'Oswald'; background-color: rgba(0,0,0,0.5); }
-
-/* ############################## STATIC PAGES ############################################### */
-
-
-/* Movie block info */
-#movieblock .screenings-info { position: absolute; top: 0; right: 0; color: white; font-family: 'Oswald'; }
-#movieblock .screenings-info .section { background-color: rgba(180,10,0,0.8); padding: 5px; font-size: 18px; text-align: right; }
-#movieblock .screenings-info .screenings .screenings-caption { float: left; background-color: rgba(180,10,0,0.8); padding: 2px; font-size: 13px; text-align: right; margin-top: 5px; }
-#movieblock .screenings-info .screenings .screening { font-size: 12px; float: left; padding: 5px 10px 5px 10px; text-align: center; }
-#movieblock .screenings-info .screenings .screening .screening-daynumber { font-size: 20px; margin-top: -5px; }
-
-#movieblock .info-container { height: 90px; }
-#movieblock .movie .info-container { height: auto; }
-#movieblock .movie-selectors { font-family: 'Oswald'; float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
-#movieblock .movie-selectors .movie-post { background-color: rgba(15,15,15,1); color: white; border: 1px solid rgba(255,255,255,0.1); margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; } /* filter: brightness(80%); -webkit-filter: brightness(80%); -moz-filter: brightness(80%); -o-filter: brightness(80%); -ms-filter: brightness(80%); */
-#movieblock .movie-selectors .movie-post:hover { cursor: pointer; background-color: rgba(0,0,0,1); opacity: 1; } /* filter: brightness(100%); -webkit-filter: brightness(100%); -moz-filter: brightness(100%); -o-filter: brightness(100%); -ms-filter: brightness(100%); */
-#movieblock .movie-selectors .movie-post .movie-post-thumbnail { position: relative; text-align: center; width: auto; }
-#movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; padding: 0 0 0 2px; font-size: 16px !important; }
-#movieblock .movie-selectors .movie-post .movie-post-info { padding: 0 0 0 2px; font-size: 12px; }
-#movieblock .movie-selectors .movie-post:hover a { text-decoration: none; color: white; }
-#movieblock .movie-selectors .movie-post a { text-decoration: none; color: #bbbbbb; }
-#movieblock .movie-selectors .movie-post { width: 160px; }
-#movieblock .movie-selectors::-webkit-scrollbar { width: 8px; }
-#movieblock .movie-selectors::-webkit-scrollbar-thumb { background: rgba(150,150,150,1); }
-#movieblock .movie-selectors::-webkit-scrollbar-thumb:window-inactive { background: rgba(255,0,0,0.4); }
-
-#movieblock .movie-info-displayer .image { float: left; color: white; }
-#movieblock .movie-info-displayer .info { overflow: hidden; color: white; }
-#movieblock .movie-info-displayer .image { padding: 0 10px 0 0; }
-#movieblock .movie-info-displayer .info .title { color: white; font-family: 'Oswald'; font-size: 20px; width: 260px; }
-#movieblock .movie-info-displayer .info .year,
-#movieblock .movie-info-displayer .info .country,
-#movieblock .movie-info-displayer .info .links,
-#movieblock .movie-info-displayer .info .runtime,
-#movieblock .movie-info-displayer .info .directors,
-#movieblock .movie-info-displayer .info .cast { color: white; font-family: 'Oswald'; font-size: 12px; }
-#movieblock .movie-info-displayer .info .directors { padding-top: 10px; }
-#movieblock .trailer-container { height: 350px; }
-#movieblock .movie-info-displayer { font-family: 'Oswald'; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
-#movieblock .movie-info-displayer .movie:not(:first-child) { display: none; }
-
-
 
 /* Signature */
 #signature { margin-right: 20px; float: right !important; text-transform: uppercase !important; }
