--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -9,6 +9,7 @@ Author URI:		mailto:author@bars.com
 
 @import url(http://fonts.googleapis.com/css?family=Oswald:400,300,700);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Lora);
 
 @import url("../bars2013/css/links.css");
 @import url("../bars2013/css/text.css");
@@ -94,12 +95,12 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 
 /* Home (index.php) */
 #page-home { overflow: hidden; }
-#page-home .posts-header, #page-home .posts-footer { background: black; color: white; font-family: 'Oswald'; text-transform: uppercase; font-size: 14pt; padding: 6px 0 6px 6px; letter-spacing: 2pt; }
+#page-home .posts-header, #page-home .posts-footer, #page-single .posts-header { background: black; color: white; font-family: 'Oswald'; text-transform: uppercase; font-size: 14pt; padding: 6px 0 6px 6px; letter-spacing: 2pt; }
 #page-home .posts-footer { text-align: right; padding: 6px 6px 6px 0; }
 #page-home .posts-header:before { content: '>>> '; }
 #page-home .posts-footer:after { content: ' >>>'; }
 
-/* Home page latests posts*/
+/* Home page latests posts */
 #page-home .latest-posts { text-align: center; margin-top: 5px; overflow: hidden; }
 #page-home .latest-posts .latest-post { border: 2px solid black; font-size: 12pt; opacity: 0.8; display: inline-block; position: relative; overflow: hidden; margin: 0 3px; text-align: left; }
 #page-home .latest-posts .latest-post:hover { opacity: 1; }
@@ -119,8 +120,32 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 #page-home .recent-posts .recent-post .post-footer .post-fb-like { float: left; height: 21px; width: 84px; }
 #page-home .recent-posts .recent-post .post-footer .post-comment-count { float: left; padding: 0 5px; background: black; padding: 2px 5px; margin-right: 5px; }
 
+/* Single post (single.php) */
+#page-single .post-header .post-category { text-transform: uppercase; color: white; background: black; padding: 10px 10px; margin: 0 2px 0 0; font-family: 'Oswald'; font-size: 0.8em; }
+#page-single .post-tags,
+#page-single .post-header .post-date,
+#page-single .post-header .post-title { margin-left: 10px; font-family: 'Oswald'; color: white; }
+#page-single .post-header .post-date,
+#page-single .post-header .post-tags { text-transform: uppercase; }
+#page-single .post-header .post-date { font-size: 9pt; margin-top: 15px; }
+#page-single .post-header .post-tags { margin-bottom: 20px; font-size: 7pt; margin-top: 5px; }
+#page-single .post-header .post-title { text-shadow: 2px 2px 0.1em black; font-size: 2.3em; letter-spacing: 1px; }
+#page-single .post-header .post-image { text-align: center; }
+#page-single .post-header .post-image img { width: 98%; height: auto; text-align: center; border: 5px solid black; }
+#page-single .post-content { margin-top: 20px; padding: 0 20px; }
 
+#page-single .post-navigation { overflow: hidden; margin: 40px 0; }
+#page-single .post-previous, #page-single .post-next { padding: 5px 20px; font-family: 'Oswald'; color: white; }
+#page-single .post-previous { float: left; }
+#page-single .post-next { float: right; }
+#page-single .post-comments { margin: 40px 0; }
 
+#page-single .post-related-posts { font-family: 'Oswald'; font-size: 12pt; text-align: center; }
+#page-single .post-related-posts .post-related-post { padding: 5px; height: 270px; background: black; vertical-align: top; width: 200px; display: inline-block; }
+#page-single .post-related-posts .post-related-post .post-related-post-date,
+#page-single .post-related-posts .post-related-post .post-related-post-title { text-align: left; }
+#page-single .post-related-posts .post-related-post .post-related-post-date { margin-top: 5px; color: white; font-size: 8pt; }
+#page-single .post-related-posts .post-related-post .post-related-post-title { margin-bottom: 30px; }
 
 /* Convocatoria (call.php -> tmpl_call) */
 #page-selection.page-content { padding-left: 0; padding-right: 0; }
@@ -219,58 +244,6 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 
 
 
-
-/* Single post */
-body.single article.post  { color: rgb(201, 201, 201); padding-top: 0 !important; padding-bottom: 0; }
-body.single article.post .entry-header { position: relative; margin-bottom: inherit; }
-body.single article.post .bars-post-meta { z-index: 9999; font-size: 0.5em; }
-body.single article.post .bars-post-title { margin-top: 5px; text-shadow: 2px 2px 0.1em black; }
-body.single article.post .bars-post-meta-content { display: initial; letter-spacing: 2px; text-transform: lowercase; padding: 2px 6px 2px 10px; color: white !important; margin-top: 0; margin-right: 2px; margin-bottom: 2px; margin-left: inherit; font-family: 'Oswald'; font-size: 0.8em; background-color: rgba(255,0,0, 0.6); }
-body.single article.post .bars-post-meta-content a { color: white !important; }
-body.single article.post .bars-post-category:before { content: "\f301"; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 16px/1 Genericons; vertical-align: text-bottom; }
-body.single article.post .entry-title { bottom: 0; background-color: rgba(0,0,0,0.8); margin: 0; position: absolute; font-size: 2em; padding: 15px 12px 10px 30px; width: 100%; color: white; font-family: 'Oswald'; letter-spacing: 2px; text-transform: uppercase !important; }
-body.single article.post .entry-header { padding: 0 !important; }
-body.single article.post .entry-header .entry-thumbnail img { width: 100%; }
-body.single article.post .entry-header .entry-thumbnail img:after { width: 100%; height: 1px; background: url("images/scratch.png"); }
-body.single article.post .entry-content { padding: 0 20px; font-size: 0.8em; font-family: 'Verdana'; }
-body.single article.post .entry-content p { text-indent: 60px; }
-body.single article.post .addthis_toolbox.addthis_default_style  { margin-bottom: 20px; }
-
-body.single article.post .bars-single-post-date-container { padding: 0 20px 20px 20px; color: white; font-weight: bold; font-size: 0.9em; }
-body.single article.post .bars-single-post-date-container .bars-single-post-date { text-shadow: 2px 2px 0.1em black; float: left; }
-body.single article.post .bars-single-post-date-container .bars-single-post-edit { float: right; }
-body.single article.post .bars-single-post-date-container .bars-single-post-date:before { content: "\f303"; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 16px/1 Genericons; vertical-align: text-bottom; }
-/*body.single article.post .bars-single-post-date-container .bars-single-post-edit:before { content: "\f411"; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 16px/1 Genericons; vertical-align: text-bottom; } */
-
-
-	/* Single post navigation */
-	body.single .bars-post-navigation { font-family: 'Oswald'; font-style: normal; font-size: 1em; background: rgba(0,0,0,0.5) !important; }
-	body.single .bars-post-navigation .bars-related-posts { padding-left: 20px; }
-	body.single .bars-post-navigation .bars-related-posts-title { color: white; letter-spacing: 2px; text-transform: lowercase; background: rgba(255,0,0, 0.6); display: inline; font-size: 1.1em; padding: 0 10px !important; }
-	body.single .bars-post-navigation .bars-related-posts-title:before { content: "\f308"; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 16px/1 Genericons; margin-right: 5px; }
-	body.single nav.navigation { font-family: 'Oswald'; background: none !important; font-style: inherit !important; font-size: inherit !important; }
-	body.single nav.navigation .nav-links { padding: 0 10px !important; }
-	body.single nav.navigation .nav-links a:link { color: rgb(180,180,180); }
-	body.single nav.navigation .nav-links a:active { color: rgb(180,180,180); }
-	body.single nav.navigation .nav-links a:visited { color: rgb(180,180,180); }
-	body.single nav.navigation .nav-links a:hover { color: white; }
-	body.single nav.navigation .nav-links a span { background-color: rgb(180,180,180); margin: 0 5px 0 5px; padding: 3px 0 5px; width: 30px; color: black; display: inline-block; text-align: center; border-radius: 50%; }
-	body.single nav.navigation .nav-links a:hover span { background-color: white;}
-	
-/* Single post footer (tags, Disqus comment system, social and related posts) */
-body.single article.post .bars-single-post-tags { padding: 4px 5px 15px 10px; position: relative; }
-body.single article.post .bars-single-post-tags:before { content: "\f302"; margin-right: 5px; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 1.8em/1 Genericons; vertical-align: text-bottom; }
-body.single article.post footer .bars-social { float: left; }
-body.single article.post footer .bars-social .addthis_toolbox  { margin-bottom: 5px; }
-body.single article.post footer .bars-link-to-comments { position: relative; bottom: 8px; float: right; font-weight: bold; color: white; }
-body.single article.post footer .bars-link-to-comments:before { content: "\f300"; -webkit-font-smoothing: antialiased; display: inline-block; font: normal 1.8em/1 Genericons; vertical-align: text-bottom; position: relative; bottom: -2px; right: 4px;}
-body.single article.post footer .bars-link-to-comments a:link,
-body.single article.post footer .bars-link-to-comments a:active,
-body.single article.post footer .bars-link-to-comments a:visited,
-body.single article.post footer .bars-link-to-comments a:hover { color: white; }
-body.single article.post footer .bars-single-post-footer-container { padding: 10px 20px 0 20px; background-color: rgba(10,10,10,0.5); overflow: hidden; }
-body.single article.post footer { padding: 0 20px 20px 20px; }
-body.single article.post #disqus_thread { padding: 20px 20px 20px 20px; }
 
 /* Search and archive */
 body.search .page-header, body.archive .archive-header { color: white; margin: 0; padding: 40px 0 0 0 !important; background: none; }
