--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -24,7 +24,7 @@ Author URI:		mailto:author@bars.com
 .overflow-hidden { overflow: hidden; }
 .hidden-movie-container { display: none; }
 
-ul.checkmark { list-style: none; list-style-position:outside;  }
+ul.checkmark { list-style: none; list-style-position: outside;  }
 ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6em; }
 
 .subtle-shadow-top { box-shadow: 0 -2px 2px 1px black; -webkit-box-shadow: 0 -2px 2px 1px black; -moz-box-shadow: 0 -2px 2px 1px black; }
@@ -35,25 +35,25 @@ ul.checkmark li:before { content: '✔'; margin-left: -1.6em; margin-right: 0.6e
 body { margin: 0; background: url("images/bgpattern2.png"); }
 
 /* Header */
-div#header { font-family: 'Oswald'; background: black; }
-div#header-container { padding-top: 15px; background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; }
-div#header-description { color: white; font-size: 0.65em; letter-spacing: 0.2em; font-weight: lighter; text-align: center; text-transform: uppercase; }
-div#header-image:hover { cursor: pointer; }
-div#header-image { margin: 6px auto 0 auto; width: 350px; height: 119px; background-image: url("images/header-img.png"); }
-div#header-clouds { height: 31px; width: 100%; background-image: url("images/scratchs_2.png"); }
-div#header-social { overflow: auto; text-align: center;}
-div#header-social div { display: inline-block; padding: 0; width: 33px; background-repeat: no-repeat; }
-div#bars-header-social-facebook, div#bars-header-social-youtube { height: 32px; }
-div#bars-header-social-twitter { height: 33px; }
-div#bars-header-social-facebook { background-image: url("images/facebook-gray.png"); }
-div#bars-header-social-facebook:hover { background-image: url("images/facebook.png"); }
-div#bars-header-social-twitter { background-image: url("images/twitter-gray.png"); }
-div#bars-header-social-twitter:hover { background-image: url("images/twitter.png"); }
-div#bars-header-social-youtube { background-image: url("images/youtube-gray.png"); }
-div#bars-header-social-youtube:hover { background-image: url("images/youtube.png"); }
+#header { background: black; }
+#header-container { padding-top: 15px; background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; }
+#header-image:hover { cursor: pointer; }
+#header-image { margin: 6px auto 0 auto; width: 350px; height: 119px; background-image: url("images/header-img.png"); }
+#header-clouds { height: 31px; width: 100%; background-image: url("images/scratchs_2.png"); }
+#header-social { text-align: center; }
+#header-social div { display: inline-block; padding: 0; width: 33px; background-repeat: no-repeat; }
+#bars-header-social-facebook,
+#bars-header-social-youtube { height: 32px; }
+#bars-header-social-twitter { height: 33px; }
+#bars-header-social-facebook { background-image: url("images/facebook-gray.png"); }
+#bars-header-social-twitter { background-image: url("images/twitter-gray.png"); }
+#bars-header-social-youtube { background-image: url("images/youtube-gray.png"); }
+#bars-header-social-facebook:hover { background-image: url("images/facebook.png"); }
+#bars-header-social-twitter:hover { background-image: url("images/twitter.png"); }
+#bars-header-social-youtube:hover { background-image: url("images/youtube.png"); }
 
 /* Header menu */
-#header-menu { position: relative; background-color: black; text-align: center; text-transform: uppercase; margin: 0; padding: 0; }
+#header-menu { position: relative; background-color: black; text-align: center; }
 #header-menu .nav-menu ul { margin: 0; padding: 0; }
 #header-menu .nav-menu ul li { display: inline-block; vertical-align: middle; padding: 8px; }
 
@@ -63,14 +63,14 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 /* Main container */
 #main { background: url("images/bgpattern2.png"); overflow: hidden; }
 #main-logo-bg { background: url("images/logo_bg.png") no-repeat; background-position: center 120px; background-attachment: fixed; overflow: hidden; background-color: rgba(10,0,0,0.4); }
-#main-container { width: 955px; margin: 0 auto; padding: 0 0 0 0; overflow: hidden; }
+#main-container { width: 955px; margin: 0 auto; overflow: hidden; }
 #content { width: 650px; float: left; }
 #content .page-header { margin-top: 15px; }
 #content .page-content { padding: 20px; }
 
 /* Footer */
 #footer { overflow: hidden; text-align: center; background: rgba(0,0,0,0.6); }
-#footer-container { width: 955px; margin: 0 auto; padding: 10px 20px 10px 20px; }
+#footer-container { width: 955px; margin: 0 auto; padding: 10px 20px; }
 #footer .footer-nav { overflow: hidden; }
 #footer .footer-logos { overflow: hidden; position: relative; }
 #footer .footer-nav .searchform { margin: 10px 0; }
@@ -87,7 +87,7 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 .bars-widget-logo { float: left; margin-right: 5px; width: 29px; height: 29px; background: url("images/loguito.png") no-repeat 0 0; }
 
 /* Sidebar */
-#sidebar-container { width: 280px; /*background-color: rgba(25,0,0,0.4);*/ margin-left: 5px; padding: 0 10px 10px 10px; float: left; overflow: hidden; }
+#sidebar-container { width: 280px; margin-left: 5px; padding: 0 10px 10px 10px; float: left; overflow: hidden; }
 #sidebar-container .bars-widget.sidebar { margin-top: 5px; margin-bottom: 15px; }
 
 /* Sidebar image crop widget */
@@ -95,68 +95,38 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 
 /* Home (index.php) */
 #page-home { overflow: hidden; }
-#page-home .posts-header, #page-home .posts-footer, #page-single .posts-header { text-shadow: 2px 2px 0.1em black; color: white; font-family: 'Oswald'; text-transform: uppercase; font-size: 18pt; padding: 6px 0 6px 6px; letter-spacing: 2pt; text-align: center; }
-#page-home .posts-footer { text-align: right; padding: 6px 6px 6px 0; }
+#page-home .posts-header, #page-single .posts-header { padding: 6px 0 6px 6px; }
 #page-home .latest-posts-header { margin-top: 20px; }
 #page-home .recent-posts-header { margin-top: 30px; }
-#page-home .latest-posts-header:before, #page-home .latest-posts-header:after,
-#page-home .recent-posts-header:before, #page-home .recent-posts-header:after { content: '\f224'; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: middle; }
-#page-home .posts-footer { margin-bottom: 20px; }
-#page-home .posts-footer:after { content: '\f458'; width: 24px; height: 24px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: top; }
+#page-home .more-posts-header { margin-bottom: 20px; }
 
 /* Home page latest posts */
-#page-home .latest-posts { font-family: 'Oswald'; color: white; }
-#page-home .latest-posts .post { display: table; border-collapse:separate; border-top: 5px; margin-bottom: 20px; }
+#page-home .latest-posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; }
 #page-home .latest-posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
 #page-home .latest-posts .post .post-info-container { position: relative; display: table-cell; vertical-align: top; padding-left: 10px; }
-#page-home .latest-posts .post .post-date { font-size: 10pt; }
-#page-home .latest-posts .post .post-title { font-size: 18pt; }
-#page-home .latest-posts .post .post-excerpt { word-wrap: break-word; font-size: 10pt; }
-#page-home .latest-posts .post .post-footer { width: 100%; position: absolute; bottom: 2px; font-size: 8pt; }
+#page-home .latest-posts .post .post-footer { width: 100%; position: absolute; bottom: 2px; }
 #page-home .latest-posts .post .post-footer .scratch { margin-bottom: 5px; }
-#page-home .latest-posts .post .post-footer .post-fb-like { float: left; height: 21px; width: 84px; }
-#page-home .latest-posts .post .post-footer .post-comment-count { float: left; padding: 0 5px; background: black; padding: 3px 5px; margin-right: 5px; }
-#page-home .latest-posts .post .post-footer .post-comment-count:before  { content: '\f108'; width: 16px; height: 16px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 16px; font-family: 'Genericons'; vertical-align: top; }
-
-/* Home page recent posts */
-#page-home .recent-posts { margin-top: 5px; overflow: hidden; }
-#page-home .recent-posts .post { border: 2px solid black; font-size: 12pt; opacity: 0.8; display: inline-block; position: relative; overflow: hidden; margin: 0 3px; text-align: left; }
-#page-home .recent-posts .post:hover { opacity: 1; }
-#page-home .recent-posts .post .post-title { width: 100%; text-shadow: 2px 2px 0.1em black; position: absolute; bottom: 0; left: 0; padding: 5px 10px 12px 10px; background-color: rgba(0,0,0,0.7); font-family: 'Oswald'; margin: 0 auto; text-align: left; }
-#page-home .recent-posts .post .post-date { position: absolute; top: 0; left: 0; padding: 0 5px; font-family: 'Oswald'; font-size: 10pt; color: white; background-color: rgba(0,0,0,0.5); }
+#page-home .latest-posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
+#page-home .latest-posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
 
 /* Single post (single.php) */
-#page-single .post-header .post-category { text-transform: uppercase; margin-top: 10px; font-family: 'Oswald'; font-size: 0.8em; }
-#page-single .post-header .post-date,
-#page-single .post-header .post-title,
-#page-single .post-header .post-social { font-family: 'Oswald'; color: white; }
-#page-single .post-header .post-date { text-transform: uppercase; }
-#page-single .post-header .post-date,
-#page-single .post-header .post-social { float: left; margin-right: 10px; }
-#page-single .post-header .post-below-title { overflow: hidden; margin-bottom: 20px; }
-#page-single .post-header .post-date { font-size: 9pt; }
-#page-single .post-header .post-title { margin: 10px 10px 10px 0; text-shadow: 2px 2px 0.1em black; font-size: 2.3em; letter-spacing: 1px; }
-#page-single .post-header .post-social .post-fb-like { height: 21px; }
+#page-single .post-header .post-category { margin-top: 10px; }
+#page-single .post-header .post-date { margin-bottom: 20px; }
+#page-single .post-header .post-title { margin: 10px 10px 10px 0; }
+#page-single .post-leave-us-a-comment { margin: 20px 10px; }
+#page-single .post-social { float: left; margin: 20px 10px; }
+#page-single .post-social .post-fb-like,
+#page-single .post-social .post-twitter { height: 21px !important; vertical-align: middle; }
 #page-single .post-header .post-image { text-align: center; }
 #page-single .post-header .post-image img { width: 100%; height: auto; text-align: center; border-top: 10px solid rgb(175,0,0); border-bottom: 3px solid rgb(175,0,0); }
-#page-single .post-content { margin: 20px 0 40px 0; padding: 0 10px; }
-
+#page-single .post-content { margin-top: 30px; padding: 0 10px; }
 #page-single .post-navigation { overflow: hidden; margin: 0 0 40px 0; }
-#page-single .post-previous, #page-single .post-next { padding: 7px 0; font-family: 'Oswald'; color: white; }
+#page-single .post-previous, #page-single .post-next { padding: 7px 0; }
 #page-single .post-previous { float: left; }
-#page-single .post-previous a:hover, #page-single .post-next a:hover { text-decoration: none; }
 #page-single .post-next { float: right; }
 #page-single .post-comments { margin: 10px 0 40px 0; }
-#page-single .post-previous a:before { content: '\f430'; width: 24px; height: 24px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: top; }
-#page-single .post-next a:after { content: '\f429'; width: 24px; height: 24px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: top; }
-#page-single .post-comments-header:before { content: '\f108'; width: 24px; height: 24px; margin-right: 3px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: top; }
-#page-single .post-related-posts-header:before { content: '\f107'; width: 24px; height: 24px; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; font-size: 24px; font-family: 'Genericons'; vertical-align: top; }
-
-#page-single .post-related-posts { font-family: 'Oswald'; font-size: 12pt; text-align: center; background: black; }
-#page-single .post-related-posts .post-related-post { padding: 5px; height: 270px; vertical-align: top; width: 200px; display: inline-block; }
-#page-single .post-related-posts .post-related-post .post-related-post-date,
-#page-single .post-related-posts .post-related-post .post-related-post-title { text-align: left; }
-#page-single .post-related-posts .post-related-post .post-related-post-date { margin-top: 5px; color: white; font-size: 8pt; }
+#page-single .post-related-posts .post-related-post { padding: 5px; height: 270px; vertical-align: top; width: 200px; display: inline-block; background: black; }
+#page-single .post-related-posts .post-related-post .post-related-post-date { margin-top: 5px; }
 #page-single .post-related-posts .post-related-post .post-related-post-title { margin-bottom: 30px; }
 
 /* Convocatoria (call.php -> tmpl_call) */
@@ -191,8 +161,8 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 #page-selection .schedule-day .movie-post .movie-post-title { width: 145px; }
 #page-selection .schedule-day .movie-post .movie-post-title,
 #page-selection .schedule-day .movie-post .movie-post-info { padding: 0 0 0 2px; }
-#page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; } /* filter: brightness(80%); -webkit-filter: brightness(80%); -moz-filter: brightness(80%); -o-filter: brightness(80%); -ms-filter: brightness(80%); */
-#page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; } /* filter: brightness(100%); -webkit-filter: brightness(100%); -moz-filter: brightness(100%); -o-filter: brightness(100%); -ms-filter: brightness(100%); */
+#page-selection .schedule-day .movie-post { position: relative; border: 1px solid rgba(255,255,255,0.1); float: left; margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
+#page-selection .schedule-day .movie-post:hover { background-color: rgba(0,0,0,1); opacity: 1; }
 
 /* Movie info (single-movie.php) / Movie block info (single-movieblock.php) */
 .movie, .movieblock { background: black; width: 700px; padding: 10px; position: relative; }
@@ -220,27 +190,19 @@ div#bars-header-social-youtube:hover { background-image: url("images/youtube.png
 .movie .trailer-container { width: 300px; float: right; margin: 0 0 5px 10px; }
 
 /* Movie block info (single-movieblock.php) */
-.movieblock .movie-selectors { font-family: 'Oswald'; float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
-.movieblock .movie-selectors .movie-post { color: white; border: 1px solid rgba(255,255,255,0.1); margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
+.movieblock .movie-selectors { float: left; height: 400px; overflow-y: auto; padding-right: 10px; }
+.movieblock .movie-selectors .movie-post { border: 1px solid rgba(255,255,255,0.1); margin: 0 5px 10px 5px; background-color: rgba(0,0,0,0.5); padding: 3px 3px 7px 3px; opacity: 0.6; }
 .movieblock .movie-selectors .movie-post:hover { cursor: pointer; background-color: rgba(0,0,0,1); opacity: 1; }
 .movieblock .movie-selectors .movie-post .movie-post-thumbnail { position: relative; text-align: center; width: auto; }
-.movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; padding: 0 0 0 2px; font-size: 16px !important; }
-.movieblock .movie-selectors .movie-post .movie-post-info { padding: 0 0 0 2px; font-size: 12px; }
-.movieblock .movie-selectors .movie-post:hover a { text-decoration: none; color: white; }
-.movieblock .movie-selectors .movie-post a { text-decoration: none; color: #bbbbbb; }
+.movieblock .movie-selectors .movie-post .movie-post-title { width: 145px; padding: 0 0 0 2px; }
+.movieblock .movie-selectors .movie-post .movie-post-info { padding: 0 0 0 2px; }
 .movieblock .movie-selectors .movie-post { width: 160px; }
 
-.movieblock .movie-info-displayer { position: relative; font-family: 'Oswald'; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
+.movieblock .movie-info-displayer { position: relative; overflow-y: auto; overflow-x: hidden; height: 400px; padding: 0 10px; }
 .movieblock .movie-info-displayer .scratch { margin: 15px 0; }
-.movieblock .movie-info-displayer .image { float: right; color: white; padding: 0; }
-.movieblock .movie-info-displayer .info { overflow: hidden; color: white; }
-.movieblock .movie-info-displayer .info .title { color: white; font-family: 'Oswald'; font-size: 20px; width: 260px; }
-.movieblock .movie-info-displayer .info .year,
-.movieblock .movie-info-displayer .info .country,
-.movieblock .movie-info-displayer .info .links,
-.movieblock .movie-info-displayer .info .runtime,
-.movieblock .movie-info-displayer .info .directors,
-.movieblock .movie-info-displayer .info .cast { color: white; font-family: 'Oswald'; font-size: 12px; }
+.movieblock .movie-info-displayer .image { float: right; padding: 0; }
+.movieblock .movie-info-displayer .info { overflow: hidden; }
+.movieblock .movie-info-displayer .info .title { width: 260px; }
 .movieblock .movie-info-displayer .info .directors { padding-top: 10px; }
 .movieblock .movie-info-displayer .trailer-container { height: 300px; }
 
