--- a/wp-content/themes/bars2013/style.css
+++ b/wp-content/themes/bars2013/style.css
@@ -54,8 +54,8 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 
 /* Header menu */
 #header-menu { position: relative; background-color: black; text-align: center; }
-#header-menu .nav-menu ul { margin: 0; padding: 0; }
-#header-menu .nav-menu ul li { display: inline-block; vertical-align: middle; padding: 8px; }
+#header-menu .nav-menu ul { position: relative; left: 50%; margin: 0; padding: 0; }
+#header-menu .nav-menu ul li { display: table-cell !important; position: relative; right: 50%; vertical-align: middle; padding: 8px; }
 
 /* Sticky menu fix */
 #header-menu { z-index: 99; width: 100%; }
@@ -97,18 +97,26 @@ body { margin: 0; background: url("images/bgpattern2.png"); }
 #page-home { overflow: hidden; }
 #page-home .posts-header, #page-single .posts-header { padding: 6px 0 6px 6px; }
 #page-home .latest-posts-header { margin-top: 20px; }
-#page-home .recent-posts-header { margin-top: 30px; }
-#page-home .more-posts-header { margin-bottom: 20px; }
+#page-home .more-posts-header { margin-bottom: 20px; padding: 5px; background-color: black; }
+#page-home .more-posts-header:hover { background-color: rgb(175,0,0); }
 
 /* Home page latest posts */
-#page-home .latest-posts { background: rgba(0,0,0,0.6); padding-bottom: 10px; }
-#page-home .latest-posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; }
-#page-home .latest-posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
-#page-home .latest-posts .post .post-info-container { position: relative; display: table-cell; vertical-align: top; padding-left: 10px; }
-#page-home .latest-posts .post .post-footer { width: 100%; position: absolute; bottom: 2px; }
-#page-home .latest-posts .post .post-footer .scratch { margin-bottom: 5px; }
-#page-home .latest-posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
-#page-home .latest-posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
+.latest-posts { padding-bottom: 10px; }
+.latest-posts .post { display: table; border-collapse: separate; border-top: 5px; margin-bottom: 20px; background: rgba(0,0,0,0.6); }
+.latest-posts .post .post-thumbnail { display: table-cell; vertical-align: top; margin-right: 10px; }
+.latest-posts .post .post-info-container { display: table-cell; vertical-align: top; padding-left: 10px; }
+.latest-posts .post .post-info-container .post-excerpt p { margin: 10px 0; }
+.latest-posts .post .post-footer .scratch { margin-bottom: 5px; }
+.latest-posts .post .post-footer .post-fb-like { float: left; margin-right: 10px; }
+.latest-posts .post .post-footer .post-comment-count { float: left; background: rgb(175,0,0); padding: 2px 10px 2px 3px; margin-right: 10px; border-radius: 3px; }
+
+/* News (news.php) */
+.pagination { font-size: 10pt; font-family: Oswald; text-align: center; background: black; margin-bottom: 10px;  }
+.pagination ul { margin: 0; padding: 0;}
+.pagination li { text-transform: lowercase; display: inline-block; }
+.pagination li a,
+.pagination li.active a { text-decoration: none; display: block; color: white; padding: 5px 20px; }
+.pagination li.active a, .pagination li a:hover { background: rgb(175,0,0); }
 
 /* Single post (single.php) */
 #page-single .post-header .post-category { margin-top: 10px; }
